# beorchid-ml

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: disease_prediction.py  health.py  items.py  users.py  weed_growth_prediction.py  yield_prediction.py
app/core/: config.py
app/db/: session.py
app/middleware/: logging.py
app/models/: item.py  user.py
app/repositories/: item_repository.py  user_repository.py
app/schemas/: disease_prediction.py  item.py  prediction.py  user.py
app/services/: disease_prediction_pipeline.py  disease_prediction_service.py  item_service.py  user_service.py  weed_growth_prediction_service.py  yield_prediction_service.py
app/utils/: image_utils.py  model_utils.py
tests/: conftest.py
tests/unit/: test_health.py  test_users.py
