[project]
name = "beorchid-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "matplotlib>=3.9.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.46",
    "tensorflow>=2.20.0",
    "ultralytics>=8.3.168",
    "uvicorn[standard]>=0.39.0",
]
